Major UI/UX improvements and documentation standardization
- Enhanced README.md with badges, quick start, use cases, and collapsible sections
- Redesigned docs/index.md with welcome banner, getting started tabs, and model registry tables
- Standardized all brain model docs (BrainLM, Brain-JEPA, Brain Harmony, BrainMT, SwiFT)
- Standardized all genetics model docs (Caduceus, DNABERT-2, Evo2, GENERator)
- Created comprehensive multimodal architectures guide (BAGEL, MoT, M3FM, Me-LLaMA, TITAN)
- Enhanced integration design patterns with ARPA-H BOM roadmap
- Added CONTRIBUTING.md with complete contribution guidelines
- Updated QUICK_REFERENCE.md with navigation and generic paths
- Enhanced mkdocs.yml with social links, footer, and tabbed interface support
- Added BAGEL and MoT paper cards and walkthroughs
- Updated benchmarks and schemas with specific details (removed TBDs)
- Improved cross-references and navigation throughout

All changes maintain core technical content while improving accessibility and user experience.

--- a/.cursorignore
+++ b/.cursorignore
@@ -1,4 +1,4 @@
-# Cursor ignore patterns for neurogenomics-kb worktree
+# Cursor ignore patterns for neuro-omics-kb worktree
 # Worktrees naturally isolate to their directory, but this provides additional exclusions
 
 # Build artifacts and cache
