--- a/kb/paper_cards/template.yaml
+++ b/kb/paper_cards/template.yaml
@@ -7,7 +7,7 @@ link: https://example.com/doi
 modality: genetics
 summary: |
   Three to five sentences summarizing contributions.
-relevance: Why it matters for Neurogenomics KB.
+relevance: Why it matters for Neuro-Omics KB.
 code_links:
   - https://github.com/example
 verified: false
