--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -87,6 +87,7 @@ nav:
   - Data:
       - UKB data map: data/ukb_data_map.md
       - Schemas: data/schemas.md
+      - Subject keys: data/subject_keys.md
       - Governance & QC: data/governance_qc.md
   - Code walkthroughs:
       - Index: code_walkthroughs/index.md
@@ -108,6 +109,34 @@ nav:
           - Me-LLaMA: code_walkthroughs/melamma_walkthrough.md
           - TITAN: code_walkthroughs/titan_walkthrough.md
           - FMS-Medical: code_walkthroughs/fms_medical_walkthrough.md
+  - Research Papers:
+      - Brain Models:
+          - BrainLM (2024): generated/kb_curated/papers-md/brainlm_2024.md
+          - Brain-JEPA (2024): generated/kb_curated/papers-md/brainjepa_2024.md
+          - Brain Harmony (2025): generated/kb_curated/papers-md/brainharmony_2025.md
+          - BrainMT (2025): generated/kb_curated/papers-md/brainmt_2025.md
+      - Genetics Models:
+          - Caduceus (2024): generated/kb_curated/papers-md/caduceus_2024.md
+          - Evo 2 (2024): generated/kb_curated/papers-md/evo2_2024.md
+          - GENERator (2024): generated/kb_curated/papers-md/generator_2024.md
+      - Multimodal Models:
+          - BAGEL (2025): generated/kb_curated/papers-md/bagel_2025.md
+          - MoT (2025): generated/kb_curated/papers-md/mot_2025.md
+          - M3FM (2025): generated/kb_curated/papers-md/m3fm_2025.md
+          - Me-LLaMA (2024): generated/kb_curated/papers-md/me_llama_2024.md
+          - TITAN (2025): generated/kb_curated/papers-md/titan_2025.md
+      - Integration & Methods:
+          - Ensemble integration (Li 2022): generated/kb_curated/papers-md/ensemble_integration_li2022.md
+          - Multimodal FMs (2025): generated/kb_curated/papers-md/mmfm_2025.md
+          - MM-LLM imaging (2025): generated/kb_curated/papers-md/mm_llm_imaging_2025.md
+          - Oncology multimodal (Waqas 2024): generated/kb_curated/papers-md/oncology_multimodal_waqas2024.md
+          - Yoon BioKDD (2025): generated/kb_curated/papers-md/yoon_biokdd2025.md
+      - Genomics & Population:
+          - GWAS diverse populations: generated/kb_curated/papers-md/gwas_diverse_populations.md
+          - PRS guide: generated/kb_curated/papers-md/prs_guide.md
+      - General:
+          - Foundation models overview (2024): generated/kb_curated/papers-md/fm_general_2024.md
   - Decisions:
       - Integration plan (Nov 2025): decisions/2025-11-integration-plan.md
+      - Dev validation plan: decisions/dev_validation_plan.md
 
