Add multimodal & clinical models documentation
- Create comprehensive model pages for BAGEL, MoT, M3FM, Me-LLaMA, TITAN, and FMS-Medical
- Add multimodal models index with overview and selection guide
- Update mkdocs.yml navigation to include Multimodal & Clinical section
- All pages follow consistent structure with neuro-omics integration strategies
- Include ARPA-H BOM integration insights for each model

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,6 +71,14 @@ nav:
           - Brain Harmony: models/brain/brainharmony.md
           - BrainMT: models/brain/brainmt.md
           - SwiFT: models/brain/swift.md
+      - Multimodal & Clinical:
+          - Overview: models/multimodal/index.md
+          - BAGEL: models/multimodal/bagel.md
+          - MoT: models/multimodal/mot.md
+          - M3FM: models/multimodal/m3fm.md
+          - Me-LLaMA: models/multimodal/me_llama.md
+          - TITAN: models/multimodal/titan.md
+          - FMS-Medical Catalog: models/multimodal/fms_medical.md
   - Integration:
       - Overview: integration/index.md
       - Strategy: integration/integration_strategy.md
