--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,9 +4,9 @@ repos:
     hooks:
       - id: ruff
         args: [--fix]
-        stages: [commit, push, manual]
+        stages: [pre-commit, pre-push, manual]
       - id: ruff-format
-        stages: [commit, push, manual]
+        stages: [pre-commit, pre-push, manual]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.11.1
@@ -14,7 +14,7 @@ repos:
       - id: mypy
         additional_dependencies: [types-PyYAML>=6.0.12]
         files: ^scripts/
-        stages: [commit, push, manual]
+        stages: [pre-commit, pre-push, manual]
 
   - repo: local
     hooks:
@@ -23,29 +23,29 @@ repos:
         entry: python scripts/manage_kb.py validate models
         language: system
         pass_filenames: false
-        stages: [push, manual]
+        stages: [pre-push, manual]
       - id: kb-validate-datasets
         name: kb-validate-datasets
         entry: python scripts/manage_kb.py validate datasets
         language: system
         pass_filenames: false
-        stages: [push, manual]
+        stages: [pre-push, manual]
       - id: kb-validate-links
         name: kb-validate-links
         entry: python scripts/manage_kb.py validate links
         language: system
         pass_filenames: false
-        stages: [push, manual]
+        stages: [pre-push, manual]
       - id: kb-ci-docs
         name: kb-ci-docs
         entry: python scripts/manage_kb.py ci docs
         language: system
         pass_filenames: false
-        stages: [push, manual]
+        stages: [pre-push, manual]
       - id: kb-ci-weights
         name: kb-ci-weights
         entry: python scripts/manage_kb.py ci weights
         language: system
         pass_filenames: false
-        stages: [push, manual]
+        stages: [pre-push, manual]
 
