--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,7 +36,17 @@ markdown_extensions:
   - def_list
   - pymdownx.tabbed:
       alternate_style: true
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span__
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
 extra:
   social:
     - icon: fontawesome/brands/github
