--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -145,12 +145,12 @@ nav:
           - Brain-JEPA (2024): generated/kb_curated/papers-md/brainjepa_2024.md
           - Brain Harmony (2025): generated/kb_curated/papers-md/brainharmony_2025.md
           - BrainMT (2025): generated/kb_curated/papers-md/brainmt_2025.md
-          - SwiFT (2023): kb/paper_cards/swift_2023.yaml
+          - SwiFT (2023): generated/kb_curated/papers-md/swift_2023.md
       - Genetics Models:
           - Caduceus (2024): generated/kb_curated/papers-md/caduceus_2024.md
+          - DNABERT-2 (2024): generated/kb_curated/papers-md/dnabert2_2024.md
           - Evo 2 (2024): generated/kb_curated/papers-md/evo2_2024.md
           - GENERator (2024): generated/kb_curated/papers-md/generator_2024.md
-          - DNABERT-2 (2024): kb/paper_cards/dnabert2_2024.yaml
       - Multimodal Models:
           - BAGEL (2025): generated/kb_curated/papers-md/bagel_2025.md
           - MoT (2025): generated/kb_curated/papers-md/mot_2025.md
@@ -168,7 +168,6 @@ nav:
           - PRS guide: generated/kb_curated/papers-md/prs_guide.md
       - General:
           - Foundation models overview (2024): generated/kb_curated/papers-md/fm_general_2024.md
-          - TabPFN (2024): kb/paper_cards/tabpfn_2024.yaml
   - Decisions:
       - Integration plan (Nov 2025): decisions/2025-11-integration-plan.md
       - Dev validation plan: decisions/dev_validation_plan.md
