Fix KB consistency: update counts, remove placeholder policy claims
- Update paper cards count from 14/18 to 20
- Update dataset cards count from 13 to 17
- Update integration guidance description (6 YAML registries + 3 narrative cards)
- Update experiment configs count (10 total: 3 production + 7 dev stubs)
- Remove 'does not vendor third-party code' policy language
- Clarify external_repos structure (tracked snapshots vs fetch-on-demand)
- Fix TREE_VIEW.md to remove KB_COMPLETION_SUMMARY.md reference
- Update KB index READMEs with accurate coverage tables
- Sync all meta documentation with actual repository state

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -119,6 +119,7 @@ nav:
       - Schemas: data/schemas.md
       - Subject keys: data/subject_keys.md
       - Governance & QC: data/governance_qc.md
+  - Experiment Configs: configs/experiments.md
   - Code walkthroughs:
       - Index: code_walkthroughs/index.md
       - Genetics:
