--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -128,6 +128,7 @@ nav:
           - DNABERT-2: code_walkthroughs/dnabert2_walkthrough.md
           - Evo 2: code_walkthroughs/evo2_walkthrough.md
           - GENERator: code_walkthroughs/generator_walkthrough.md
+          - HyenaDNA: code_walkthroughs/hyena_walkthrough.md
       - Brain:
           - BrainLM: code_walkthroughs/brainlm_walkthrough.md
           - Brain-JEPA: code_walkthroughs/brainjepa_walkthrough.md
@@ -136,6 +137,7 @@ nav:
           - SwiFT: code_walkthroughs/swift_walkthrough.md
       - Multimodal:
           - BAGEL: code_walkthroughs/bagel_walkthrough.md
+          - Flamingo: code_walkthroughs/flamingo_walkthrough.md
           - MoT: code_walkthroughs/mot_walkthrough.md
           - M3FM: code_walkthroughs/m3fm_walkthrough.md
           - Me-LLaMA: code_walkthroughs/melamma_walkthrough.md
@@ -153,6 +155,7 @@ nav:
           - DNABERT-2 (2024): generated/kb_curated/papers-md/dnabert2_2024.md
           - Evo 2 (2024): generated/kb_curated/papers-md/evo2_2024.md
           - GENERator (2024): generated/kb_curated/papers-md/generator_2024.md
+          - HyenaDNA (2023): generated/kb_curated/papers-md/hyenadna_2023.md
       - Multimodal Models:
           - BAGEL (2025): generated/kb_curated/papers-md/bagel_2025.md
           - MoT (2025): generated/kb_curated/papers-md/mot_2025.md
@@ -169,9 +172,14 @@ nav:
           - RC-equivariant networks (2021): generated/kb_curated/papers-md/reverse-complement-equivariant_2021.md
           - RC consistency for DNA LMs (2025): generated/kb_curated/papers-md/reverse-complement-consistency_2025.md
           - Systems & algorithms for multi-hybrid LMs (2025): generated/kb_curated/papers-md/systems-algorithms-multihybrid_2025.md
+          - Brain MRI bias unlearning (2021): generated/kb_curated/papers-md/brain-mri-bias-unlearning_2021.md
+          - Brain multisite harmonization (MURD 2024): generated/kb_curated/papers-md/brain-multisite-harmonization_2024.md
+          - Site unlearning (Dinsdale 2021): generated/kb_curated/papers-md/dinsdale_site_unlearning_2021.md
       - Genomics & Population:
           - GWAS diverse populations: generated/kb_curated/papers-md/gwas_diverse_populations.md
           - PRS guide: generated/kb_curated/papers-md/prs_guide.md
+      - Tabular Baselines:
+          - TabPFN (2024): generated/kb_curated/papers-md/tabpfn_2024.md
       - General:
           - Representation learning (2012): generated/kb_curated/papers-md/representation-learning_2012.md
           - Foundation models overview (2024): generated/kb_curated/papers-md/fm_general_2024.md
